...
                                <Text><LucideIcon name="Palette" size={16} className="text-primary" /></Text>
                                <Text>Theme Settings</Text>
                            </DropdownMenuItem>
                            <DropdownMenuSeparator />
                            <DropdownMenuItem onPress={signOut}>
                                <Text><LucideIcon name="LogOut" size={16} className="text-primary" /></Text>
                                <Text>Log out</Text>
                            </DropdownMenuItem>
                        </DropdownMenuContent>
                    </DropdownMenu>
                </View>
            </View>
        </Animated.View>
...
