appId: "ai.stor.chat"
# jsEngine: graaljs
env:
    TESTING_EMAIL: testing@morr.biz
    TESTING_EMAIL_PASSWORD: testing@morr.biz
    IMAP_PASSWORD: FZLMoa77[G^-p9R4
    IMAP_HOST: mail.morr.biz
    IMAP_PORT: 993
    CLEANUP_TASKS: "deleteAuthUser,clearInbox"
    HELPER_API_HOST: https://app.stor.chat
    MAESTRO_SECRET: "QF6XUR6Q2LGyDSOn"
    MAESTRO_DRIVER_STARTUP_TIMEOUT: 120000
---
- clearState
- runFlow: helper/openApp.yml
- assertVisible: "Grow Store"

- runScript:
    file: helper/cleanupUser.js

# Step 1: Start registration
- tapOn: "Get Started"

- waitForAnimationToEnd

- tapOn:
    below: "Full Name"
- inputText: testing flow

- hideKeyboard

- tapOn:
    below: "Email Address"
- inputText: ${TESTING_EMAIL}

- hideKeyboard

- tapOn:
    below: "Password"
- inputText: ${TESTING_EMAIL_PASSWORD}

- hideKeyboard

- tapOn: ".*Create Account & Send OTP.*"

- waitForAnimationToEnd

- extendedWaitUntil: 
     visible: "Enter OTP"
     timeout: 10000

- extendedWaitUntil: 
     visible: ThisTextWillNeverAppear
     optional: true
     timeout: 10000

- runScript:
    file: helper/getOtp.js

# Step 2: Wait for OTP screen
- assertVisible: "Enter OTP"

- tapOn:
    below: ".*Verification Code.*"
- inputText: ${output.otp}

- hideKeyboard

- tapOn: ".*Create Account.*"

- waitForAnimationToEnd

# Step 5: Verify login
- extendedWaitUntil:
    visible: ".*Welcome back.*"
    timeout: 10000

- assertVisible: "Available pages"

- assertVisible:
    text: "[1-9]\\d* items"